# CG_Praktikum_1

./: .gitignore  CMakeLists.txt  README.md
Aufgabe1_spinning_square/: CMakeLists.txt  main.cpp
Aufgabe2_widget/: CMakeLists.txt  main.cpp
Aufgabe3_cube/: CMakeLists.txt  cube.cpp  cube.h  main.cpp
Aufgabe3_cube/MainWindow/: mainWindow.cpp  mainWindow.ui
Aufgabe4_cube_Vertex/: cube.cpp  cube.h
Aufgabe4_cube_Vertex/MainWindow/: mainWindow.cpp  mainWindow.h  mainWindow.ui
Aufgabe4_cube_Vertex/VertexManipulationWidget/: vertexManipulationWidget.cpp  vertexManipulationWidget.h  vertexManipulationWidget.ui
OpenGL_QT_aGentleIntroduction/: CMakeLists.txt  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h
